--- a/fluent.conf
+++ b/fluent.conf
@@ -4,10 +4,10 @@
   port 24284
 </source>
 
-<match export.office>
+<match export.*>
   @type gcloud_pubsub
   project "#{ENV['GCP_PROJECT_ID']}"
-  topic "projects/#{ENV['GCP_PROJECT_ID']}/topics/test"
+  topic "projects/#{ENV['GCP_PROJECT_ID']}/topics/${tag[1]}"
   <buffer>
     @type memory
     flush_interval 1s
